Added GetAllGames
